syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ethanium.model";

import "common/genre.proto";

message UserSearchRequest {
  string login_id = 1;
}

message UserResponse {
  string login_id = 1;
  string name = 2;
  common.Genre genre = 3;
}

message UserUpdateGenreRequest {
  string login_id = 1;
  common.Genre genre = 2;
}

service UserService {
  rpc getUserGenre(UserSearchRequest) returns (UserResponse);
  rpc updateUserGenre(UserUpdateGenreRequest) returns (UserResponse);
}
